objects/vlocity_ins__OmniScriptInstance__c.object
<CustomObject>
    <description>Represents a specific execution of a Vlocity OmniScript that has been saved for later completion. Do not manually modify the records or the OmniScript will likely not be able to be resumed.</description>
    <fields>
        <fullName>vlocity_ins__IsContentEncoded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Content Encoded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsLwcEnabled__c</fullName>
        <formula>vlocity_ins__OmniScriptId__r.vlocity_ins__IsLwcEnabled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Lightning Web Component Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastSaved__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Saved</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectId__c</fullName>
        <label>Object Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectLabel__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OmniScript</label>
        <referenceTo>vlocity_ins__OmniScript__c</referenceTo>
        <relationshipName>VlocityOmniScriptInstances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptLanguageCode__c</fullName>
        <label>OmniScript Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptLanguage__c</fullName>
        <formula>TEXT(vlocity_ins__OmniScriptId__r.vlocity_ins__Language__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScript Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptSubType__c</fullName>
        <formula>TEXT(vlocity_ins__OmniScriptId__r.vlocity_ins__SubType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScript Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptType__c</fullName>
        <formula>TEXT(vlocity_ins__OmniScriptId__r.vlocity_ins__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScript Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OmniScriptVersion__c</fullName>
        <formula>vlocity_ins__OmniScriptId__r.vlocity_ins__Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OmniScript Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReferenceNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Reference Number</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelativeResumeLink__c</fullName>
        <label>Relative Resume Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ResumeLink__c</fullName>
        <label>Resume Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Saved OmniScript</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>vlocity_ins__ObjectLabel__c</columns>
        <columns>vlocity_ins__LastSaved__c</columns>
        <columns>vlocity_ins__ResumeLink__c</columns>
        <columns>vlocity_ins__Status__c</columns>
        <columns>vlocity_ins__ObjectId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved OmniScripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>